Bug 1279869 - Keep message id when editing a draft. r=mkmelin